tests/snapshots/cases@04_funext.ott.snap
---
source: tests/snapshots.rs
expression: out
input_file: tests/cases/04_funext.ott
---
def funext
  : (A : Type) -> (B : A -> Type) -> (f : (x : A) -> B x) -> (g : (x : A) -> B x) -> ((x : A) -> Eq (B x) (f x) (g x)) -> Eq ((x : A) -> B x) f g
  := \A => \B => \f => \g => \h => h
def funext-inv
  : (A : Type) -> (B : A -> Type) -> (f : (x : A) -> B x) -> (g : (x : A) -> B x) -> Eq ((x : A) -> B x) f g -> (x : A) -> Eq (B x) (f x) (g x)
  := \A => \B => \f => \g => \p => p
