tests/snapshots/cases@08_natrec.ott.snap
---
source: tests/snapshots.rs
expression: out
input_file: tests/cases/08_natrec.ott
---
def double
  : Nat -> Nat
  := \n => natrec (\_ => Nat) zero (\_ => \r => suc (suc r)) n
eval
  = zero
  : Nat
eval
  = suc (suc zero)
  : Nat
eval
  = suc (suc (suc (suc zero)))
  : Nat
eval
  = suc (suc (suc (suc (suc (suc (suc (suc (suc (suc zero)))))))))
  : Nat
def add
  : Nat -> Nat -> Nat
  := \m => \n => natrec (\_ => Nat) n (\_ => \r => suc r) m
eval
  = suc (suc (suc (suc (suc zero))))
  : Nat
